--- a/8.Src/QAProject/VPumpQuery/Strings.resx
+++ b/8.Src/QAProject/VPumpQuery/Strings.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="All" xml:space="preserve">
+    <value>&lt;全部&gt;</value>
+  </data>
   <data name="mnu_pump_last" xml:space="preserve">
     <value>泵站最新(&amp;L)</value>
   </data>
