--- a/8.Src/QAProject/HDC.FluxQuery/frmPowerAlaram.resx
+++ b/8.Src/QAProject/HDC.FluxQuery/frmPowerAlaram.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,23 +117,4 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="mnu_hd_query" xml:space="preserve">
-    <value>供电查询(&amp;D)</value>
-  </data>
-  <data name="PowerAlarm" xml:space="preserve">
-    <value>断电报警</value>
-  </data>
-  <data name="title_flux_form" xml:space="preserve">
-    <value>流量查询</value>
-  </data>
-  <data name="title_hd_query" xml:space="preserve">
-    <value>供电查询</value>
-  </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="AlarmColumnConfig" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>AlarmColumnConfig.xml;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
-  </data>
-  <data name="mnu_flux_query" xml:space="preserve">
-    <value>流量查询(&amp;L)</value>
-  </data>
 </root>
