--- a/8.Src/QAProject/HDC.FluxQuery/Strings.resx
+++ b/8.Src/QAProject/HDC.FluxQuery/Strings.resx
@@ -145,4 +145,7 @@
   <data name="PowerOff" xml:space="preserve">
     <value>断电</value>
   </data>
+  <data name="MonthReportColumnConfig" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>MonthReportColumnConfig.xml;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
