--- a/8.Src/QAProject/HDC.FluxQuery/Strings.resx
+++ b/8.Src/QAProject/HDC.FluxQuery/Strings.resx
@@ -151,4 +151,22 @@
   <data name="YearReportColumnConfig" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>YearReportColumnConfig.xml;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="ExportButtonText" xml:space="preserve">
+    <value>导出</value>
+  </data>
+  <data name="LabelMonth" xml:space="preserve">
+    <value>月份:</value>
+  </data>
+  <data name="LabelYear" xml:space="preserve">
+    <value>年份:</value>
+  </data>
+  <data name="Statistics" xml:space="preserve">
+    <value>统计</value>
+  </data>
+  <data name="StatisticsMonth" xml:space="preserve">
+    <value>月统计表</value>
+  </data>
+  <data name="StatisticsYear" xml:space="preserve">
+    <value>年统计表</value>
+  </data>
 </root>
