--- a/8.Src/QAProject/HDC.FluxQuery/Strings.resx
+++ b/8.Src/QAProject/HDC.FluxQuery/Strings.resx
@@ -129,10 +129,6 @@
   <data name="title_hd_query" xml:space="preserve">
     <value>供电查询</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="AlarmColumnConfig" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>AlarmColumnConfig.xml;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
-  </data>
   <data name="mnu_flux_query" xml:space="preserve">
     <value>流量查询(&amp;L)</value>
   </data>
@@ -144,12 +140,6 @@
   </data>
   <data name="PowerOff" xml:space="preserve">
     <value>断电</value>
-  </data>
-  <data name="MonthReportColumnConfig" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>MonthReportColumnConfig.xml;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
-  </data>
-  <data name="YearReportColumnConfig" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>YearReportColumnConfig.xml;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="ExportButtonText" xml:space="preserve">
     <value>导出</value>
@@ -168,5 +158,15 @@
   </data>
   <data name="StatisticsYear" xml:space="preserve">
     <value>年统计表</value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="AlarmColumnConfig" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>config\alarmcolumnconfig.xml;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="MonthReportColumnConfig" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>config\monthreportcolumnconfig.xml;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="YearReportColumnConfig" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>config\yearreportcolumnconfig.xml;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
 </root>
