--- a/8.Src/QAProject/HDC.FluxQuery/Strings.resx
+++ b/8.Src/QAProject/HDC.FluxQuery/Strings.resx
@@ -169,4 +169,10 @@
   <data name="YearReportColumnConfig" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>config\yearreportcolumnconfig.xml;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="StatisticsMonthMenu" xml:space="preserve">
+    <value>月统计表(&amp;M)</value>
+  </data>
+  <data name="StatisticsYearMenu" xml:space="preserve">
+    <value>年统计表(&amp;Y)</value>
+  </data>
 </root>
